--- a/exercises/newsies/class.html
+++ b/exercises/newsies/class.html
@@ -28,7 +28,7 @@
             <div class="soup">
                 <p>One bowl of Mulligatani soup. Limit one time per year.  Asking for bread is strictly prohibited.</p>
             </div>
-            <div>
+            <div class ="sponge ">
                 <p>The last case of Sponges for sale.  Late last night, a woman cleared the the upper east side clean of Todays Sponges.  Hurry now before your next fight with your boyfriend.</p>
             </div>
             <div class ="merv" >
@@ -36,9 +36,21 @@
                 </p>
             </div> 
         </div>
+        
         <div class ="quotes">
             <h1>Quotes</h1>
-            <p>It became very clear to me sitting out there today that every decision I've made in my entire life has been wrong. My life is the complete opposite of everything I want it to be. Every instinct I have, in every aspect of life, be it something to wear, something to eat - it's all been wrong-George Costanza.  You ever dream in 3-D? It’s like the bogeyman is coming RIGHT AT YOU-Cosmo Kramer.  Why go to the park when you can just pop a pill-Cosmo Kramer.  Serenity Now, Insanity Later-Lloyd Braun.  You saying you want a piece of me, you want a piece of me?   You got it!!!-Frank Costanza.  It's a Festivus for the rest of us! So who's going to do the feats of strength?-Frank Costanza.  How about George-Mr Krueger.  The sea was very angry that day my friend-George Costanza.  No soup for you!!  One year!!!!!-The Soup Nazi  </p>
+            <div class ="one">
+                <p>It became very clear to me sitting out there today that every decision I've made in my entire life has been wrong. My life is the complete opposite of everything I want it to be. Every instinct I have, in every aspect of life, be it something to wear, something to eat - it's all been wrong-George Costanza.       
+                </p> 
+            </div>
+            <div class ="two">
+                <p>You ever dream in 3-D? It’s like the bogeyman is coming RIGHT AT YOU-Cosmo Kramer.  Why go to the park when you can just pop a pill-Cosmo Kramer.  Serenity Now, Insanity Later-Lloyd Braun.    
+                </p> 
+            </div> 
+            <div class ="three">   
+                <p>You saying you want a piece of me, you want a piece of me?   You got it!!!-Frank Costanza.  It's a Festivus for the rest of us! So who's going to do the feats of strength?-Frank Costanza.  How about George-Mr Krueger.  The sea was very angry that day my friend-George Costanza.  No soup for you!!  One year!!!!!-The Soup Nazi 
+                </p>
+            </div>    
         </div>         
     </div> 
 </body>
