--- a/exercises/blog2/index.html
+++ b/exercises/blog2/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class ="header">
         <h1>The Blog About Nothing</h1>
-        <h2>And I Do Mean Absolutely Nothing</h2>
+        <h2 id="logo" class="run-animation">And I Do Mean Absolutely Nothing</h2>
     </div>
     <div class = "top-nav">
         <a class = "active" href = "#home">Home</a>
