exercises and practice

--- a/exercises/djjs/index.html
+++ b/exercises/djjs/index.html
@@ -3,16 +3,30 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>All The Cool Stuff</title>
     <meta name="viewport"content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./styles.css"/>
     
 </head>
 <body>
-    <div id ="prettyColors">
-        
-
+    <div id = "one">
+        <box class = "one">One</box>    
     </div>
-<script src="./main.js"></script>    
+    <div id = "two">
+        <box class ="two">Two</box>
+    </div>
+    <div id = "three">
+        <box class = "three">Newman</box>
+    </div>
+    <div id = "four">
+        <box class = "four">Four</box>
+    </div>
+    <div id = "five">
+        <box class = "five">Five</box>
+    </div>
+    <div id = "six">
+        <box class = "six">Serentity Now</box>
+    </div>
+  
 </body>
 </html>
