--- a/exercises/djjs/index.html
+++ b/exercises/djjs/index.html
@@ -22,7 +22,7 @@
         <box class = "four">Four</box>
     </div>
     <div id = "five">
-        <box class = "five">Five</box>
+        <box class = "five">Yo Yo Ma</box>
     </div>
     <div id = "six">
         <box class = "six">Serentity Now</box>
