--- a/exercises/go-speedclicker/index.html
+++ b/exercises/go-speedclicker/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Speed Clicker</title>
 </head>
 <body>
-    
+    <button id = "btn">Submit<Button>
+<script src = "main.js" ></script>   
 </body>
 </html>
