--- a/projects/zen-garden/index.html
+++ b/projects/zen-garden/index.html
@@ -24,14 +24,21 @@
             <H2>The Beauty of CSS Design</H2>
         </div>
         <div id="view-design">
-            <p>‹</p>
-            <h1>VIEW ALL DESIGNS</h1>
-            <P>›</P>
+                <div class ='divp1'>
+                    <p id = "left">‹</p>
+                </div>
+                <div class ='divT'> 
+                    <h1>VIEW ALL DESIGNS</h1>
+                </div>
+                <div class ='divp2'>
+                    <P id ="right">›</P>
+            </div>      
         </div>
         <div id="par1-container">
             <div id="par1">
                 <p>A demonstration of what can be accomplished through CSS-based design. Select any style sheet from the
                 list to load it into this page.<br><br>
+                DOWNLOAD the example HTML file and CSS file<br><br>   
 
                     <span id="enlightenment">THE ROAD TO ENLIGHTENMENT</span><br><br>
                     Littering a dark and dreary road lay the past relics of browser-specific tags, incompatible DOMs,
@@ -58,16 +65,38 @@
             </div>
         </div>
         <div id="list1">
-            <ul>
-
+            <ul class = "one"> 
+                <h1>SPRING360</h1>
+                <h2><span class = "h2">by</span>	Rene Hornig</h2>
             </ul>
-            <ul></ul>
-            <ul></ul>
-            <ul></ul>
-            <ul></ul>
-            <ul></ul>
-            <ul></ul>
-            <ul></ul>
+            <ul class = "two">
+                <h1>WITHERING BEAUTY</h1>
+                <h2><span class ="h2">by </span> William Duffy</h2> 
+            </ul>
+            <ul class = "three">
+                <H1>TINY BLUE</h1>
+                <h2><span class ="h2">by </span> Timo Virtanen</h2>
+            </ul>
+            <ul class = "four">
+                <h1>RETRO THEATER</h1>
+                <h2><span class ="h2">by </span>	Eric Roge`</h2>
+            </ul>
+            <ul class = "five">
+                <h1>LILY POND</h1>
+                <h2><span class ="h2">by</span> Rose Thorogood</h2>
+            </ul>
+            <ul class = "six">
+                <h1>ICICLE OUTBACK</h1>
+                <h2> <span class ="six">by </span> Timo Virtanen</h2>
+            </ul>
+            <ul class = "seven">
+                <h1>CSS ZEN ARMY</h1>
+                <h2><span class ="h2">by </span> Carl Desmond</h2>    
+            </ul>
+            <ul class = "eight">
+                <h1>THE ORIGINAL</h1>
+                <h2><span class ="h2">by </span> Joachim Shotter</h2>
+            </ul>
 
         </div>
         <div id="par2-container">
@@ -95,9 +124,22 @@
             </div>
         </div>
         <div id="list2">
-
+            <div class = 'div1'>
+                <ul class = 'one1'>VIEW THIS DESIGNS CSS</ul>
+            </div>
+            <div class = 'div1'>
+                <ul class = 'two2'>FAQ</ul>
+            </div>
+            <div class ='div1'>
+                <ul class = 'three3'>TRANSLATION</ul>
+            </div>
+            <div class = 'div1'>
+                <ul class = 'four4'>CSS RESOURCES</ul>
+            </div>
+            <div class = 'div1'>
+                <ul class = 'five5'>SUBMIT A DESIGN</ul>
+            </div>
         </div>
-
         <div id="require-container">
             <div id="require">
                 <p><span class="require">REQUIREMENTS</span><br><br>
@@ -131,11 +173,13 @@
                 <span id="zen">Zen Garden, the book.</span></p>
         </div>
         <div id="links">
+            <div class = "links">
                 <a href="" class="html">5</a>
                 <a href="" class="html">3</a>
                 <a href="" class="html">c</a>
                 <a href="" class="html">a</a>
                 <a href="" class="html">g</a>
+            </div>    
         </div>
     </div>
 </body>
