--- a/projects/zen-garden/git.html
+++ b/projects/zen-garden/git.html
@@ -1,3 +1,5 @@
+
+    
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="git.css">
     <link href="https://fonts.googleapis.com/css?family=Darker+Grotesque&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One&display=swap" rel="stylesheet">
@@ -24,15 +26,15 @@
             <H2>The Beauty of CSS Design</H2>
         </div>
         <div id="view-design">
-            <div class ='divp1'>
+                <div class ='divp1'>
                     <p id = "left">‹</p>
-            </div>
-            <div class ='divT'> 
+                </div>
+                <div class ='divT'> 
                     <h1>VIEW ALL DESIGNS</h1>
-            </div>
-            <div class ='divp2'>
+                </div>
+                <div class ='divp2'>
                     <P id ="right">›</P>
-                </div>         
+            </div>      
         </div>
         <div id="par1-container">
             <div id="par1">
@@ -185,3 +187,4 @@
 </body>
 
 </html>
+
