--- a/projects/zen-garden/index.html
+++ b/projects/zen-garden/index.html
@@ -18,21 +18,23 @@
 
 <body>
     <div id="div-container">
-        <div id="title">
-            <img src="http://www.csszengarden.com/214/enso.svg">
-            <h1>CSS ZEN GARDEN</h1>
-            <H2>The Beauty of CSS Design</H2>
-        </div>
-        <div id="view-design">
-            <div class ='divp1'>
-                    <p id = "left">‹</p>
-            </div>
-            <div class ='divT'> 
-                    <h1>VIEW ALL DESIGNS</h1>
-            </div>
-            <div class ='divp2'>
-                    <P id ="right">›</P>
-                </div>         
+        <div id="title-view-design">
+            <div id = 'title'>
+                <img src="http://www.csszengarden.com/214/enso.svg">
+                <h1 class =' title'>CSS ZEN GARDEN</h1>
+                <H2>The Beauty of CSS Design</H2>  
+            </div>  
+            <div class = 'view-design'>
+                <div class ='divp1'>
+                        <p id = "left">‹</p>
+                </div>
+                <div class ='divT'> 
+                        <h1 class ='designs'>VIEW ALL DESIGNS</h1>
+                </div>
+                <div class ='divp2'>
+                        <P id ="right">›</P>
+                </div>  
+            </div>       
         </div>
         <div id="par1-container">
             <div id="par1">
